finally fixed portfolio being slightly off centre

--- a/src/index.css
+++ b/src/index.css
@@ -817,8 +817,12 @@ textarea {
 
 .flex-row {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	top: 10%;
+}
+
+ul {
+	padding-inline-start: 0px !important;
 }
 
 .space-between {
